--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -61,7 +61,7 @@ a {
 
 		<div class="col-md-2" style="text-align: right; margin-left: 80px;">
 
-		<i class="fa fa-question-circle fa-3x"></i>
+		<a href="#" data-toggle="modal" data-target="#welcome"><i class="fa fa-question-circle fa-3x"></i></a>
 
 		</div>
 
