--- a/app/views/users/endenter.html.erb
+++ b/app/views/users/endenter.html.erb
@@ -1,6 +1,8 @@
 <% provide(:title, "Thank you for choosing!!") %>
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+ <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+
 <style>
 
 .small-icons{
@@ -28,20 +30,22 @@
 
 </style>
 
+<body style="font-family: Quicksand;">
+
 <div class="container text-center">
 
 
-      <h2 style="font-family: 'Work Sans', sans-serif;" class="small_font">ハロー！<strong>Teacher <%= @user.nick %></strong> です！. <br>私を選んでくれてありがとう！</h2>
-      <hr>
+      <h3>ハロー！<strong>Teacher <%= @user.nick %></strong> です！. <br>私を選んでくれてありがとう！</h3>
 
+<div style="background-color: #f9f9f9; padding: 40px; margin-top: 0; border-top: 2px solid #e9e9e9;">
 <div class="col-md-6">
 
-<img src="<%= @user.picture %>" class="img-responsive img-thumbnail" style="width:80%;">
-<h2>Teacher <%= @user.nick %></h2>
+<img src="<%= @user.picture %>" class="img-responsive img-thumbnail img-circle" style="width:80%;">
+<h3>Teacher <%= @user.nick %></h3>
 
 </div>
 
-<div class="col-md-6" style="margin-bottom: 30px;">
+<div class="col-md-6" style="margin-bottom: 30px; border-left: 2px solid #e9e9e9;">
 
 <div class="col-md-12">
 <% if @current_user.skype.nil? || @current_user.skype.empty? %>
@@ -159,6 +163,8 @@ setInterval( function() {
 <a type="button" class="btn" style="color: #000; width: 100%; margin-top: 30px;" href="/"><i class='fa fa-mail-reply'></i> 戻る</a>
 
 </div>
+
+</div>
 <div class="modal fade" id="schedule" role="dialog">
     <div class="modal-dialog">
     
@@ -193,6 +199,7 @@ setInterval( function() {
   </div>
 
 </div>
+</body>
 <% end %>
 <script>
 <!--
