--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,7 @@
 @media only screen and (max-width: 600px) {
 
 .mobile_underline {
-  border-bottom: 2px solid #ccc;
+  border-bottom: 2px solid #e9e9e9;
   padding-bottom: 20px !important;
 }
 
